kubernetes-manager/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: hanin
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: backend
        image: ghcr.io/hanin-said/praxis-backend:v0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
