kubernetes-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hanin-ingress
  namespace: hanin
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: hanin.praxis-form.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080

  tls:
    - hosts:
        - hanin.praxis-form.de
      secretName: hanin-praxis-form-tls
